Fix: Solved Marker Animation, Side Menu Overflow, Async Google Map, Ajax Error Handling, Two Way Bindings
	1. Marker/list item when clicks add animation effect to it.
	2. Side Menu List Scrollable on modile landscape mode by using Overflow propertyon lower devices.
	3. Google Map Load Asynchronously and automatically calls initMap on load.
	4. Google Map and Wikipedia implement error handling.
	5. Using Knockout Two Way Data binding for changing menu state and active state on list items.

Issue Resolved: https://review.udacity.com/#!/reviews/136006

Version: 1.0 First Release

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <link rel="stylesheet" href="css/icomoon.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
-    <body class="menu-hidden">
+    <body data-bind="css: toggleMenu">
         <div class="header">
-            <a href="#" class="menu-icon-link" data-bind="click: function() {$('body').toggleClass('menu-hidden');}">
+            <a href="#" class="menu-icon-link" data-bind="click: function(){menuStatus(!menuStatus())}">
                 <i class="icon-list"></i>
             </a>
 
@@ -23,20 +23,21 @@
 
         <div class="slide-menu">
             <div class="form-group">
-                <input class="form-control" type="text" data-bind="textInput: filterText, valueUpdate: 'keyup'" placeholder="Filter Locations"></input>
+                <input class="form-control" type="text" data-bind="textInput: filterText, valueUpdate: 'keyup'" placeholder="Filter Locations">
             </div>
             <div class="list-group" data-bind="foreach: filter()">
-                <a class="list-group-item" href="#" data-bind="text: name, click: $parent.showInfoWindowWhenClicked"></a>
+                <a class="list-group-item" href="#" data-bind="text: name, click: $parent.showInfoWindowWhenClicked,  css: {active: $index() === $parent.activeListItemIndex()}"></a>
             </div>
         </div>
 
-        <div id="map"></div>
+        <div class="map"></div>
 
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
         <script src="js/app.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
+        onerror="alert('Unable to Load Google Map, Check Internet Connection.')" async defer></script>
         <script>
         </script>
     </body>
