--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="map"></div>
 
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js"></script>
         <script src="js/app.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?callback=initMap"
